<resources>
    <string name="app_name">Corona Virus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_with">or login with</string>
    <string name="have_no_account">have no account</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome</string>
    <string name="get_started">Get Started</string>
    <string name="or_signup_with">or signup with</string>
    <string name="have_an_account">have an account?</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="search_country">Search Country</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="today_recover">Today Recover</string>
    <string name="today_cases">Today Cases</string>
    <string name="country_name">Country Name</string>
    <string name="today_death">Today Death</string>
</resources>