<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/ic_arrow_back"
            android:backgroundTint="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_corona"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/coronavirus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-12dp"
            android:text="@string/welcome"
            android:textColor="@color/base"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_corona"
            app:layout_constraintEnd_toEndOf="@id/iv_corona"
            app:layout_constraintStart_toStartOf="@id/iv_corona" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/base"
            android:textSize="18sp"
            app:boxStrokeColor="@color/base"
            app:hintTextColor="@color/base"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/base">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/l_full_name" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/base"
            android:textSize="18sp"
            app:boxStrokeColor="@color/base"
            app:hintTextColor="@color/light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/l_full_name"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/base">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/l_email" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/base"
            android:textSize="18sp"
            app:boxStrokeColor="@color/base"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/base"
            app:hintTextColor="@color/base"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/l_password"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/base">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/l_confirm_password" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/base"
            android:textSize="18sp"
            app:boxStrokeColor="@color/base"
            app:hintTextColor="@color/base"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/l_email"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/base">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/l_email" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/base"
            android:textSize="18sp"
            app:boxStrokeColor="@color/base"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/base"
            app:hintTextColor="@color/base"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/l_phone"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/base">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/l_email" />


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/main_button"
            android:backgroundTint="@color/base"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/l_confirm_password" />

        <TextView
            android:id="@+id/tv_or_login_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/or_signup_with"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_or_login_with">

            <ImageView
                android:id="@+id/login_with_facebook"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:padding="5dp"
                android:src="@drawable/ic_facebook"
                app:layout_constraintTop_toBottomOf="@id/tv_or_login_with" />

            <ImageView
                android:id="@+id/login_with_google"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:src="@drawable/ic_google"
                app:layout_constraintTop_toBottomOf="@id/tv_or_login_with" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signup_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:text="@string/have_an_account"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/login"
                android:textColor="@color/base"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>